<resources>
    <string name="app_name">SmartCity</string>

                                                            <!--    BOUTONS    -->

    <!-- boutons navigation-->

    <string name="buttonAdds">Promo</string>
    <string name="buttonNews">Actus</string>
    <string name="buttonShop">Mags</string>
    <string name="buttonNetwork">R.S.</string>
    <string name="buttonProfile">Profil</string>

    <!-- boutons actus-->

    <string name="buttonNewsPersonal">Perso</string>
    <string name="buttonNewsCity">Ville</string>

    <!-- boutons réso-->

    <string name="buttonNetworkList">Tous</string>
    <string name="buttonNetworkJoined">Rejoints</string>
    <string name="buttonNetworkConfirm">Valider</string>
    <string name="buttonNetworkSend">Envoyer</string>
    <string name="buttonNetworkCreated">Créés</string>

    <!-- boutons réso select-->

    <string name="buttonNetworkSelectedJoin">Rejoindre</string>
    <string name="buttonNetworkSelectedQuit">Quitter</string>

    <!-- boutons management réso-->

    <string name="buttonMNetworkSuppr" >Supprimer Reseau</string>


    <!-- boutons magasins-->

    <string name="buttonShopAlphabet">Annuaire</string>
    <string name="buttonShopProximity">Proches</string>

    <!-- boutons profil-->

    <string name="buttonProfilValider">Valider</string>

    <!-- boutons création news-->
    <string name="buttonCNewsAdd">Ajouter</string>
    <string name="buttonCNewsCancel">Annuler</string>



    <!--    TEXTES    -->

    <!-- Profil -->

    <string name="txtProfilePseudo">Pseudo :</string>
    <string name="txtProfileDate">Date de naissance :</string>
    <string name="txtProfileCity">Ville :</string>
    <string name="txtProfileSexe">Sexe :</string>
    <string name="txtProfileInterest">Centre d\'interets :</string>
    <string name="radioProfileSexeM">Homme</string>
    <string name="radioProfileSexeF">Femme</string>
    <string name="txtProfileDateModel">aaaa-mm-dd</string>

    <!-- Reso -->

    <string name="txtNetworkName">Pseudo :</string>
    <string name="txtNetworkOwner">Appartient à :</string>
    <string name="txtNetworkCity">Ville :</string>
    <string name="txtNetworkChooseName">Nom du réseau : </string>
    <string name="txtNetworkPrivacy">Confidentialité du réseau : </string>
    <string name="txtNetworkPrivate">Privé</string>
    <string name="txtNetworkPublic">Public</string>


    <!--AlertDialog MainAcitvity-->
    <string name="dialog_messageMain">Vos informations personnelles ne pourront plus etre modifiees.\nVos centre d interets pourront etre changes dans l onglet Profil.</string>
    <string name="dialog_titleMain">Etes vous sur ?</string>
    <string name="okMain">Valider</string>
    <string name="noMain">Annuler</string>

    <!--Management réso-->
    <string name="txtMNetworkMembers" >Membres  :</string>
    <string name="txtMNetworkPendingMembers" >En attente :</string>

    <!--News-->
    <string name="txtCNewsTitle">Titre :</string>
    <string name="txtCNewsCity">Ville :</string>
    <string name="txtCNewsDate">Date :</string>
    <string name="txtCNewsText">Description :</string>
    <string name="txtCNewsImage">Image :</string>
    <string name="dialog_MNetworkDeleteMessage">Vous allez supprimer le reseau social, etes vous sur de votre choix?</string>
    <string name="dialog_MNetworkDeleteTitle">Suppression du Reseau</string>

    <string name="dialog_MNNetworkUpdateOwner">Vous ne serez plus proprietaire du reseau. Etes vous sur ?</string>
    <string name="dialog_MNNetworkDeleteUser">Vous allez supprime cet utilisateur du reseau. Etes vous sur ?</string>
    <string name="dialog_MNNetworkRejectRequest">Refuser la demande?</string>
    <string name="dialog_MNNetworkAcceptRequest">Accepter la demande?</string>

</resources>
