<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="725dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMainName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/txtProfilePseudo" />

        <EditText
            android:id="@+id/editTextMainName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <TextView
            android:id="@+id/textViewMainDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/txtProfileDate" />

        <EditText
            android:id="@+id/editTextMainDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:ems="10"
            android:hint="@string/txtProfileDateModel"
            android:inputType="date" />

        <TextView
            android:id="@+id/textViewMainCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/txtProfileCity" />

        <Spinner
            android:id="@+id/spinnerMainCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewMainSex"
            android:layout_width="match_parent"
            android:textColor="@color/colorText"
            android:layout_height="wrap_content"
            android:text="@string/txtProfileSexe" />

        <RadioGroup
            android:id="@+id/radioGroupMainSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonMainM"
                android:layout_width="wrap_content"
                android:textColor="@color/colorText"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioProfileSexeM" />

            <RadioButton
                android:id="@+id/radioButtonMainF"
                android:layout_width="wrap_content"
                android:textColor="@color/colorText"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioProfileSexeF" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewMainCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/txtProfileInterest" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="571dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/listMainCategories"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/buttonMainApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonProfilValider" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>